fix(components): fix overflow behavior of FlipConsoleLayout sidebar

--- a/packages/swirl-components/src/components/flip-console-layout/flip-console-layout.css
+++ b/packages/swirl-components/src/components/flip-console-layout/flip-console-layout.css
@@ -18,7 +18,8 @@
 
 .console-layout__sidebar {
   display: grid;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
   width: 100%;
   height: 100%;
   border-right: var(--s-border-width-default) solid var(--s-border-default);
